Update Equipe.java
Atualização